# opengbsa

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  README.md  check_prmtop.py  complete_mmgbsa_config.yaml  config_master.yaml  config_parallel_test.yaml  create_comprehensive_report.py  docker-compose.yml  mmgbsa_cli.py  prepare_complex2.py  pyproject.toml  regenerate_report.py  requirements.txt  run_mmpbsa.py  test_config.yaml  test_reporting_debug.py
assets/: logo_generator.py
conda-recipe/: meta.yaml
config/: COMPLETE_CONFIG_GUIDE.md  README.md  complete_mmgbsa_config.yaml  examples.yaml  mmgbsa_config.yaml  templates.yaml  validation.yaml
docs/: CONFIGURATION.md  MULTI_ENGINE_GUIDE.md  README.md  environment.yml
docs/source/: advanced.rst  amber_guide.md  api_reference.rst  changelog.rst  conf.py  config_guide.rst  contributing.rst  gromacs_guide.md  index.rst  installation.md  installation.rst  multi_engine_guide.md  outputs.md  outputs.rst  testing.rst  theory.md  theory.rst  troubleshooting.rst  usage.rst
mmgbsa/: __init__.py  _version.py  cli.py  combined_system.py  complete_runner.py  config.py  config_patch.py  conversion.py  core.py  core_from_git.py  decomposition.py  energy_decomp.py  entropy.py  inputs.py  logger.py  normal_mode.py  parameterizer.py  pymol_viz.py  quasi_harmonic.py  reporting.py  runner.py  topology.py  trajectory.py  utils.py  visualization.py
mmgbsa/forcefields/: kcx_charmm36.xml  kcx_charmm36_gromacs.xml
mmgbsa_analysis/: mmgbsa_report.txt
parameterization_work/: KCX.xml  KCX_capped_map.json
test/: README.md  ligand.sdf  run_analysis_test.py  test_complete_config.py  test_complete_config.yaml  test_openmm_platforms.py  test_runner_simple.py  test_warning_suppression.py  test_yaml_config.py
test/3if6_dimer_test/: config.yaml  convert_sdf.py
test/3if6_test/: config.yaml
test/6xj3_test/: config.yaml
test/7khz_monomer_test/: #topol.top.1#  #topol.top.2#  ions.tpr  mdout.mdp  plot_ss.py  runGromacs.sh
test/7khz_monomer_test/mdp/: nvt_310.mdp
test/7khz_monomer_test/replica_1/graph/: #prod_complex_rmsd_all.xvg.1#  #prod_complex_rmsd_ligand.xvg.1#  #prod_complex_rmsd_ligand.xvg.2#  #prod_complex_rmsf_ref_allatom.xvg.1#  min_pairdist_UNL.xvg  mini_complex_pot.xvg  npt_complex_pressure.xvg  npt_complex_volume.xvg  prod_complex_gyrate.xvg  prod_complex_mindist.xvg  prod_complex_rmsd.xvg  prod_complex_rmsd_all.xvg  prod_complex_rmsd_ca.xvg  prod_complex_rmsd_ligand.xvg  prod_complex_rmsf_ref.xvg  prod_complex_rmsf_ref_allatom.xvg  temperature_nvt_310.xvg
test/7khz_monomer_test/replica_1/mdp/: npt.mdp
test/7khz_monomer_test/replica_2/graph/: #prod_complex_rmsd_all.xvg.1#  #prod_complex_rmsd_ligand.xvg.1#  #prod_complex_rmsd_ligand.xvg.2#  #prod_complex_rmsf_ref_allatom.xvg.1#  min_pairdist_UNL.xvg  mini_complex_pot.xvg  npt_complex_pressure.xvg  npt_complex_volume.xvg  prod_complex_gyrate.xvg  prod_complex_mindist.xvg  prod_complex_rmsd.xvg  (+6 more)
test/configs/: 6xj3_config.yaml  6xj3_config_gbn2.yaml  advanced_test_config.yaml  complete_mmgbsa_config.yaml  complex2_config.yaml  dcd_test_config.yaml  dimer_dual_test.yaml  frame_test_config.yaml  frame_test_configs.yaml  mmgbsa_config.yaml  test_complete_config.yaml  test_complex_config.yaml  verification_test.yaml
test/diagnostics/: check_charges.py  check_clashes.py  check_connectivity.py  check_ligand_charge.py  check_ligand_order.py  check_pbc_integrity.py  check_pickle_charge.py  check_spurious_bonds.py  debug_entropy.py  debug_import.py  debug_path.py  debug_toolkits.py  diagnose_components.py  diagnose_energy.py  inspect_res.py  verify_sasa.py
test/unit/: test_combined_system.py  test_complete_config.py  test_frame_selection.py  test_gasteiger.py  test_numpy_patch.py  test_protein_param.py
test/utils/: convert_gro.py  convert_ligand.py  convert_tpr.py  create_clean_pdb.py  fix_complex_build.py  fix_pdb.py  fix_pdb_mdtraj.py  refine_trajectory.py  repair_complex2.py  repair_protein.py  repair_trajectory.py  split_chains.py  strip_trajectory.py  use_pdbfixer.py
(+57 files in other folders)
